springboot starter 3.1.0 with HelloController test
+MiscItemControllerTest, +dependencies in build.gradle